some updates to old posts
also included linkedin

--- a/_posts/2024-01-07-vesuvius.md
+++ b/_posts/2024-01-07-vesuvius.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Vesuvius Challenge"
 date: 2024-01-07
-excerpt: "Como foi estar no time que ficou em segundo lugar na competição"
+excerpt: "Nosso time com pesquisadores do IFSC/USP ficou em segundo lugar na competição!"
 image: assets/images/post_imgs/vesuvius.jpg
 ---
 
